# MisMatch

./: .cursorignore  .dockerignore  .gitignore  .railways.gitignore  DEPLOYMENT-ALTERNATIVES.md  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  Procfile  README.md  backend-railway.json  build-and-test.sh  buildpack.yml  deploy-backend.sh  deploy-to-railway.ps1  deploy-to-railway.sh  deploy-to-render.ps1  deploy.md  docker-compose.yml  implementation.md  nixpacks.toml  railway.toml  render.yaml  run-dev.ps1  run-dev.sh  test-docker-build.ps1  websocket_test.html
chat-backend/: .dockerignore  .env  Cargo.toml  Dockerfile  LOCAL_POSTGRES.md  Procfile  RAILWAY.md  README.md  Shuttle.toml  fly.toml  nixpacks.toml  package-lock.json  package.json  railway.json  railway.toml  render.yaml
chat-backend/src/: main.rs
chat-backend/src/db/: mod.rs  models.rs  schema.rs
chat-backend/src/handlers/: api.rs  http.rs  mod.rs  ws.rs
chat-backend/src/models/: message.rs  session.rs
chat-backend/src/utils/: avatar.rs  mod.rs  password.rs
chat-frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vercel.json
chat-frontend/src/: App.css  App.js  App.jsx  theme.js
chat-frontend/src/components/: Chat.js  Chat.jsx  CreateRoomButton.jsx  Debug.jsx  RoomDialog.jsx  RoomList.jsx  RoomSidebar.jsx  StyledComponents.jsx
chat-frontend/src/components/theme/: theme.jsx
