[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.0"
actix-web-actors = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
urlencoding = "2.1"
env_logger = "0.9"
actix-cors = "0.6.4"
dotenv = "0.15.0"
deadpool-postgres = "0.10"
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }



